/*
 * test_records_nested_proto2.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.apple.foundationdb.record.evolution.nestedproto2;

option java_package = "com.apple.foundationdb.record.evolution";
option java_outer_classname = "TestRecordsNestedProto2";

import "record_metadata_options.proto";
import "evolution/test_nested_proto2.proto";

// This file and test_records_nested_proto2.proto are identical except that
// the nested record uses proto3 syntax in this file and proto2 syntax in the other.
message MyRecord {
    int64 rec_no = 1 [(field).primary_key = true];
    NestedRecord parent = 2;
}

message RecordTypeUnion {
    MyRecord _MyRecord = 1;
}
