/*
 * test_records_tuple_fields.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record.testTupleFields;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsTupleFieldsProto";

import "record_metadata_options.proto";
import "tuple_fields.proto";

message MyFieldsRecord {
  optional UUID uuid = 1 [(field).primary_key = true];
  optional NullableDouble fdouble = 2 [(field).index = {}];
  optional NullableFloat ffloat = 3 [(field).index = {}];
  optional NullableInt32 fint32 = 4 [(field).index = {}];
  optional NullableInt64 fint64 = 5 [(field).index = {}];
  optional NullableBool fbool = 6 [(field).index = {}];
  optional NullableString fstring = 7 [(field).index = {}];
  optional NullableBytes fbytes = 8 [(field).index = {}];
}

message RecordTypeUnion {
  optional MyFieldsRecord _MyFieldsRecord = 1;
}
